feat: improve analysis workflows and Java 8 support